# tradle_leaderboard

./: .dockerignore  .gitignore  CNAME  Dockerfile  IMPLEMENTATION.md  README.md  fly.toml  index.html  litestream.yml  pyproject.toml  run.sh
backend/: app.py  glicko2.py  mockdata.py  ratings.py  recalculate.py
spec/: BACKEND.md  IMPLEMENTATION.md  glicko2-impl.md  glicko2.md  mock-impl.md  mock.md
