[project]
name = "tradle-leaderboard"
version = "0.1.0"
description = "Tradle score tracking leaderboard with multi-tenant backend"
requires-python = ">=3.13"
dependencies = [
    "bottle>=0.12",
    "gunicorn>=21.0",
]

[project.scripts]
tradle-backend = "backend.app:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]
